Fixed issue when printing user data

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -10,3 +10,16 @@ log4j.appender.console.encoding=UTF-8
   
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.conversionPattern=%d [%t] %-5p %c - %m%n
+
+################################################################################
+
+log4j.logger.com.avaya.util.transaction = info, process
+# Trace File.
+log4j.appender.process=org.apache.log4j.RollingFileAppender
+log4j.appender.process.File=./process.log
+log4j.appender.process.MaxFileSize=50MB
+log4j.appender.process.MaxBackupIndex=20
+log4j.appender.process.DatePattern='.'yyyy-MM-dd
+log4j.appender.process.layout=org.apache.log4j.PatternLayout
+log4j.appender.process.layout.ConversionPattern=%d{dd/MM/yyyy HH:mm:ss:SSS} %5p - %m%n
+log4j.appender.process.Encoding=UTF-8
